--- a/PySpark_day3_Students_And_Examinations_Problem.ipynb
+++ b/PySpark_day3_Students_And_Examinations_Problem.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# install pyspark lib\n",
+        "# ps54 -> install pyspark lib\n",
         "%pip install pyspark"
       ],
       "metadata": {
